# nucleic-acid-validation

./: .coveragerc  .flake8  .gitignore  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yaml
naval/: bases_validator.py  nucleotide_definitions.py  nucleotide_geometry.py  printer.py  residue_cache_entry.py  restraint_definition.py  validate.py  validate_bases.py  validation_record.py
naval/validators/: bases_validator.py  geometry_validator.py  po4_validator.py  sugar_basic_validator.py  sugar_pucker_validator.py  sugar_validator.py  validator.py
tests/: test_printer.py  test_validate.py  test_validation_record.py  test_validators.py
tests/examples/: 1d8g.cif  3p4j.cif  5ckk.cif  6bel.cif
