[metadata]
name = nucleic-acid-validation
version = 0.0.1
description = Tool for validation of RNA/DNA geometry
author = Marcin Kowiel
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    naval
install_requires =
    biopython==1.79
    numpy==1.22.3
python_requires = >=3.6
zip_safe = no

[options.package_data]
naval = py.typed

[flake8]
max-line-length = 120
